--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lan="en">
+
 <head>
 	<title>Homepage</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../static/css/login.css" rel="stylesheet">
+    
+    <style type="text/css">
+      body {
+        padding: 30px;
+        background-color: gray;
+      }
+    </style>
+   
 </head>
+
 <body>
+	<!-- NAVBAR
+    ================================================== -->
+   <div class="navbar navbar-inverse navbar-fixed-top"> 
+     <div class="navbar-inner">
+        <div class = "container">
+         	<h1 style="color:white"> My Garden, Your Garden </h1>
+        </div>
+      </div>
+    </div>
+
+
 	
-	<script src="/static/js/jquery-2.0.3.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+	
+	<script src="http://code.jquery.com/jquery.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
 </body>
 </html>
