--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -5973,6 +5973,8 @@ a.badge:focus {
   position: relative;
   margin-bottom: 20px;
   line-height: 1;
+  background-image: url('../img/green.jpeg');
+  background-size: 100% 100%;
 }
 
 .carousel-inner {
