--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,10 @@
 <html lan="en">
 
 <head>
-	<title>Homepage</title>
+	<title>Profile</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script|Rancho' rel='stylesheet' type='text/css'>
 	<link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="../static/css/login.css" rel="stylesheet">
@@ -12,7 +13,7 @@
     <style type="text/css">
       body {
         padding: 30px;
-        background-color: gray;
+        background-color: white;
       }
     </style>
    
@@ -24,7 +25,7 @@
    <div class="navbar navbar-inverse navbar-fixed-top"> 
      <div class="navbar-inner">
         <div class = "container">
-         	<h1 style="color:white"> My Garden, Your Garden </h1>
+         	<h1> My Garden, Your Garden </h1>
         </div>
       </div>
     </div>
