--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-{% extend 'base.html'%}
 <!-- To delete when merging templates
 ======================================-->
 <!DOCTYPE html>
@@ -8,6 +7,7 @@
   <title>Login</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='http://fonts.googleapis.com/css?family=Pinyon+Script|Rancho' rel='stylesheet' type='text/css'>
   <link href="../static/css/bootstrap.css" rel="stylesheet">
   <link href="../static/css/bootstrap-responsive.css" rel="stylesheet">
   <link href="../static/css/login.css" rel="stylesheet">
@@ -35,10 +35,9 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <img src="../static/img/green.jpeg" alt="Title">
           <div class="container">
-            <div class="carousel-caption">
-              <h1 class="text-center">My Garden, Your Garden</h1>
+            <div class="carousel-caption text-center">
+              <h1> My Garden, Your Garden </h1>
             </div>
           </div>
         </div>
@@ -46,7 +45,7 @@
           <img src="../static/img/mobama.jpeg" alt="Community">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Community</h1>
+              <h2>Community</h2>
               <p class="lead">Get tips from the community on growing your 
               own garden. See inspiration stories. Make new friends through the community blog.
               </p>
@@ -57,7 +56,7 @@
           <img src="../static/img/buyer.jpeg" alt="Buyers">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Sharing</h1>
+              <h2>Sharing</h2>
               <p class="lead">Farmers market may be closer than you think.
               See what produce is available for purchase from neighbors in your 
               community.
@@ -69,7 +68,7 @@
           <img src="../static/img/seller.jpeg",  alt="Sellers">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Growing</h1>
+              <h2>Growing</h2>
               <p class="lead">Growing your own garden is a great way to relax,
               create memories with family, and learn new things. Join the 
               our community to make a healthier neighborhood.</p>
@@ -85,13 +84,13 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
     <script>
-      !function ($) {
+    !function ($) {
         $(function(){
          
           $('#myCarousel').carousel({
-            interval:1000;
+            interval:1000
         })
-      }(window.jQuery)
+    }(window.jQuery);
     </script>
     
   </body>
