--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -4,7 +4,7 @@
 <hr class="featurette-divider">
 
       <div class="featurette">
-    <div class="featurette">
+        <div class="featurette">
         <h2 class="featurette-heading">Produce Market <span class="muted">What would you like to sell today?</span></h2>
         <form action="">
             {{form.hidden_tag()}}
@@ -19,7 +19,7 @@
 
             <input type="submit" value="Add Produce to Market!">
         </form>
-
+    </div>
     </div>
 
 {% endblock %}
