--- a/static/css/login.css
+++ b/static/css/login.css
@@ -26,6 +26,7 @@
 
     }
 
+
     /* Remove border and change up box shadow for more contrast */
     .navbar .navbar-inner {
       border: 0;
@@ -52,7 +53,12 @@
       margin-top: 10px;
     }
 
-
+   .navbar h1{
+    font-family: 'Pinyon Script', cursive;
+    font-size: 40px;
+    text-align: center;
+    color: white;
+  }
 
     /* CUSTOMIZE THE CAROUSEL
     -------------------------------------------------- */
