--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <div class="container">
 	<!-- NAVBAR
     ================================================== -->
    <div class="navbar navbar-inverse navbar-fixed-top"> 
@@ -30,8 +31,34 @@
       </div>
     </div>
 
+  <!-- Profile
+    ================================================== -->
+    
 
-	
+    <div class="container marketing">
+
+      <!-- Three columns pic, user info, menu -->
+      <div class="row">
+        <div class="span4">
+          <img class="img-circle" data-src="../static/img/twins.jpg">
+        </div>
+        <div class="span4">
+          <table>
+          <tr><p> Welcome {user.firstname} {user.lastname} </p></tr>
+          <tr> <address>Address {user.address}</address>
+          <
+        </div><!-- /.span4 -->
+        <div class="span4">
+          <img class="img-circle" data-src="holder.js/140x140">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+      </div><!-- /.row -->
+
+    </div><!--container-->
+	 
+   {%block context%}{%endblock%}
 	
 	<script src="http://code.jquery.com/jquery.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
