--- a/templates/sell.html
+++ b/templates/sell.html
@@ -42,7 +42,28 @@
     <div class="container marketing">
 
       <!-- START THE FEATURETTES -->
-
+      	<div class="span12">
+			<h1 class="header">Sell From Your Garden</h1>
+		</div>
+      <div class="row">
+        <div class="span4">
+			<h3><i class="icon-plus-sign"></i> Add Item to Inventory</h3>
+         
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+        <div class="span4">
+          <img class="img-circle" data-src="holder.js/140x140">
+          <h2>Heading</h2>
+      
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+        <div class="span4">
+          <img class="img-circle" data-src="holder.js/140x140">
+          <h2>Heading</h2>
+         
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div><!-- /.span4 -->
+      </div><!-- /.row -->
       <hr class="featurette-divider">
 <div class="container">
 	<div class="row">
@@ -53,47 +74,25 @@
 			<h3><i class="icon-plus-sign"></i> Add Item to Inventory</h3>
 			<form action="/add_product">
 				<input type="text" name="title" placeholder="Title" />
-				<br />
+				
 				<input type="text" name="author" placeholder="Author" />
 				<br />
 				<textarea name="body" placeholder="Post Body"></textarea>
 				<br />
-				<input class="btn" type="submit" value="Add Post" />
+				<input class="btn" type="submit" value="Add Item" />
 			</form>
 		</div>
 	<div class="fileupload fileupload-new" data-provides="fileupload">
   		<div class="fileupload-preview thumbnail" style="width: 200px; height: 150px;"></div>
   			<div>
-    			<span class="btn btn-file"><span class="fileupload-new">Select image</span><span class="fileupload-exists">Change</span><input type="file" /></span>
-    			<a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
+    			<span class="btn btn-file"><span class="fileupload-new">Select image</span><input type="file" /></span>
+    			
   			</div>
 		</div>
 
 	</div>
 </div>
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-chrome.png">
-        <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="featurette">
-        <img class="featurette-image pull-left" src="../assets/img/examples/browser-icon-firefox.png">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-safari.png">
-        <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-
-      <hr class="featurette-divider">
+      
 
       <!-- /END THE FEATURETTES -->
 
@@ -101,7 +100,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2013 Team Hackbright, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
