--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -7,7 +7,9 @@
       background-color: black;
     }
 
-
+    .division{
+      padding-top: 20px;
+    }
 
     /* CUSTOMIZE THE NAVBAR
     -------------------------------------------------- */
