--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,8 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='http://fonts.googleapis.com/css?family=Pinyon+Script|Rancho' rel='stylesheet' type='text/css'>
 	<link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="../static/css/login.css" rel="stylesheet">
+  <!-- <link href="{{url_for('../static', filename='css/bootstrap.min.css')}}" rel="stylesheet"> -->
+  <link href="../static/css/bootstrap-responsive.css" rel="stylesheet">
+  <!-- <link href="{{url_for('../static', filename='css/bootstrap-responsive.css')}}" rel="stylesheet"> -->
+  <link href="../static/css/login.css" rel="stylesheet">
+  <!-- <link href="{{url_for('../static', filename='css/login.css')}}" rel="stylesheet"> -->
     
     <style type="text/css">
       body {
@@ -33,28 +36,39 @@
 
   <!-- Profile
     ================================================== -->
-    
-
+    <br><br><br>
     <div class="container marketing">
 
       <!-- Three columns pic, user info, menu -->
       <div class="row">
         <div class="span4">
-          <img class="img-circle" data-src="../static/img/twins.jpg">
+          <img class="img-circle" src="../static/img/twins.jpg">
         </div>
         <div class="span4">
+          <form action='/profile' method='GET'>
           <table>
-          <tr><p> Welcome {user.firstname} {user.lastname} </p></tr>
-          <tr> <address>Address {user.address}</address>
-          <
+            <tr><p> Welcome {{user.firstname}} {{user.lastname}} </p></tr>
+            <tr><p> Email: {{user.email}}</p></tr>
+            <tr> 
+              <td> <address>{{user.address}}</address> </td>
+              <td> <address>{{user.city}}, {{user.state}}</address></td>
+            </tr>
+          </table>
         </div><!-- /.span4 -->
         <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Visit the community</h2>
+         
+          <ul>
+            <li class="btn"><a href="/buyProduct">Buy from neighbors</a><br></li>
+           
+            <li class="btn"><a href="/addProduct">Sell to neighbors</a></br></li>
+          
+            <li class="btn"><a href="/communityBlog"> Talk with the community </a></br></li> 
+          </ul>           
+          
         </div><!-- /.span4 -->
       </div><!-- /.row -->
+    </form>
 
     </div><!--container-->
 	 
