add backup login routes

--- a/app/templates/buy.html
+++ b/app/templates/buy.html
@@ -7,9 +7,11 @@
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-chrome.png">
+        <img class="featurette-image pull-right" src="../static/img/seller2.jpeg">
         <h2 class="featurette-heading">Produce Market <span class="muted">What would you like to purchase today?</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <form action='buyProduct'
+        
+        </form>
       </div>
 
       <hr class="featurette-divider">
