--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -17,7 +17,7 @@
    <div class="navbar navbar-inverse navbar-fixed-top"> 
      <div class="navbar-inner">
         <div class = "container">
-          <form action="login" method="post" class="navbar-form pull-right">
+          <form action="login" method="POST" class="navbar-form pull-right">
             <input class="span2" type="text" placeholder="Email">
             <input class="span2" type="password" placeholder="Password">
             <button type="submit" class="btn">Sign in</button>
