--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -124,6 +124,29 @@
     }
 
 
+   /* Featurettes
+    ------------------------- */
+
+    .addProduct{
+
+    }
+    .addProduct p {
+      display: inline;
+    }
+
+    .addProduct h2 {
+      font-family: 'Rancho', cursive;
+      font-size:40px;
+    }
+
+    /* Thin out the marketing headings */
+    .addProduct-heading {
+      padding-left: 100px;
+      font-family: 'Rancho', cursive;
+      font-size: 20px;
+      line-height: 1;
+      letter-spacing: -1px;
+    }
 
     /* RESPONSIVE CSS
     -------------------------------------------------- */
@@ -158,6 +181,53 @@
         max-width: 40%;
         margin: 0 auto 20px;
       }
+    }
+
+
+    @media (max-width: 767px) {
+
+      .navbar-inner {
+        margin: -20px;
+      }
+
+      .carousel {
+        margin-left: -20px;
+        margin-right: -20px;
+      }
+      .carousel .container {
+
+      }
+      .carousel .item {
+        height: 300px;
+      }
+      .carousel img {
+        height: 300px;
+      }
+      .carousel-caption {
+        width: 65%;
+        padding: 0 70px;
+        margin-top: 100px;
+      }
+      .carousel-caption h1 {
+        font-size: 30px;
+      }
+      .carousel-caption .lead,
+      .carousel-caption .btn {
+        font-size: 18px;
+      }
+
+      .marketing .span4 + .span4 {
+        margin-top: 40px;
+      }
+
+      .featurette-heading {
+        font-size: 30px;
+      }
+      .featurette .lead {
+        font-size: 18px;
+        line-height: 1.5;
+      }
+
     }
 
     /* MARKETING CONTENT
@@ -229,36 +299,5 @@
         line-height: 1.5;
       }
 
-    }
-
- /* Featurettes
-    ------------------------- */
-
-    .featurette-divider {
-      margin: 80px 0; /* Space out the Bootstrap <hr> more */
-    }
-    .featurette {
-      padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
-      overflow: hidden; /* Vertically center images part 2: clear their floats. */
-    }
-    .featurette-image {
-      margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
-    }
-
-    /* Give some space on the sides of the floated elements so text doesn't run right into it. */
-    .featurette-image.pull-left {
-      margin-right: 40px;
-    }
-    .featurette-image.pull-right {
-      margin-left: 40px;
-    }
-
-    /* Thin out the marketing headings */
-    .featurette-heading {
-      font-family: 'Rancho', cursive;
-      font-size: 30px;
-      font-weight: 300;
-      line-height: 1;
-      letter-spacing: -1px;
     }
 
