--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
   <link href='http://fonts.googleapis.com/css?family=Pinyon+Script|Rancho' rel='stylesheet' type='text/css'>
 	<link href="../static/css/bootstrap.css" rel="stylesheet">
   
-  <link href="../static/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="../static/css/bootstrap-responsive.min.css" rel="stylesheet">
   
   <link href="../static/css/login.css" rel="stylesheet">
   
