--- a/app/templates/buy.html
+++ b/app/templates/buy.html
@@ -7,27 +7,24 @@
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-right" src="../static/img/seller2.jpeg">
-        <h2 class="featurette-heading">Produce Market <span class="muted">What would you like to purchase today?</span></h2>
-        <form action='buyProduct'
-        
-        </form>
+        <img class="featurette-image pull-right" src="../static/img/seller2.jpeg" width="200" height="200">
+        <h2 class="featurette-heading">Produce Market: <span class="muted">What would you like to purchase today?</span></h2>
+        <form action='buyProduct'></form>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="../assets/img/examples/browser-icon-firefox.png">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
+        <h2 class="featurette-heading">Oh yeah, it's that good: <span class="muted">See for yourself.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-safari.png">
-        <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <img class="featurette-image" src="">
+        <h2 class="featurette-heading">Gardeners in your area!!</h2>
       </div>
 
       <hr class="featurette-divider">
