--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -19,7 +19,7 @@
       right: 0;
       z-index: 10;
       margin-top: 20px;
-      margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+      /*margin-bottom: -90px; *//* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
     }
     .navbar-wrapper .navbar {
 
@@ -45,6 +45,7 @@
     /* Navbar links: increase padding for taller navbar */
     .navbar .nav > li > a {
       padding: 15px 20px;
+      position: relative;
     }
 
     /* Offset the responsive button for proper vertical alignment */
@@ -58,6 +59,15 @@
     text-align: center;
     color: white;
   }
+
+  .navbar .nav-list li{
+    list-style-type: none;
+  }
+
+  .navbar .dropdown{
+    margin-right: -200px;
+  }
+
 
     /* CUSTOMIZE THE CAROUSEL
     -------------------------------------------------- */
@@ -124,29 +134,37 @@
     }
 
 
-   /* Featurettes
+    /* Featurettes
     ------------------------- */
 
-    .addProduct{
-
+    .featurette-divider {
+      margin: 10px 0; /* Space out the Bootstrap <hr> more */
     }
-    .addProduct p {
-      display: inline;
+    .featurette {
+      padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
+      overflow: hidden; /* Vertically center images part 2: clear their floats. */
+      font-family: 'Rancho';
+    }
+    .featurette-image {
+      margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
     }
 
-    .addProduct h2 {
-      font-family: 'Rancho', cursive;
-      font-size:40px;
+    /* Give some space on the sides of the floated elements so text doesn't run right into it. */
+    .featurette-image.pull-left {
+      margin-right: 40px;
+    }
+    .featurette-image.pull-right {
+      margin-left: 40px;
     }
 
     /* Thin out the marketing headings */
-    .addProduct-heading {
-      padding-left: 100px;
-      font-family: 'Rancho', cursive;
-      font-size: 20px;
+    .featurette-heading {
+      font-size: 30px;
+      font-weight: 300;
       line-height: 1;
       letter-spacing: -1px;
     }
+
 
     /* RESPONSIVE CSS
     -------------------------------------------------- */
@@ -221,10 +239,10 @@
       }
 
       .featurette-heading {
-        font-size: 30px;
+        font-size: 15px;
       }
       .featurette .lead {
-        font-size: 18px;
+        font-size: 15px;
         line-height: 1.5;
       }
 
@@ -234,10 +252,11 @@
     -------------------------------------------------- */
 
     /* Center align the text within the three columns below the carousel */
-    .marketing .span4 {
+    .marketing .span4{
       font-family: 'Rancho', cursive;
-      font-size: 30px;
-      text-align: justify;
+      font-size: 20px;
+     
+      
     }
     .marketing h2 {
       font-weight: normal;
@@ -247,57 +266,13 @@
       margin-right: 10px;
     }
 
-    .marketing .profile{
-      padding-top: 40px
-    }
-
     .marketing li{
       list-style-type: none;
     }
 
-    @media (max-width: 767px) {
-
-      .navbar-inner {
-        margin: -20px;
-      }
-
-      .carousel {
-        margin-left: -20px;
-        margin-right: -20px;
-      }
-      .carousel .container {
-
-      }
-      .carousel .item {
-        height: 300px;
-      }
-      .carousel img {
-        height: 300px;
-      }
-      .carousel-caption {
-        width: 65%;
-        padding: 0 70px;
-        margin-top: 100px;
-      }
-      .carousel-caption h1 {
-        font-size: 30px;
-      }
-      .carousel-caption .lead,
-      .carousel-caption .btn {
-        font-size: 18px;
-      }
-
-      .marketing .span4 + .span4 {
-        margin-top: 40px;
-      }
-
-      .featurette-heading {
-        font-size: 30px;
-      }
-      .featurette .lead {
-        font-size: 18px;
-        line-height: 1.5;
-      }
-
+    .marketing table{
+      border: solid #fff;
     }
+    
+    
 
